--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             // Vérifier s'il s'agit d'un dispositif Android
             if (agentUtilisateur.indexOf("android") > -1) {
                 // Rediriger vers la page spécifique Android
-                window.location.href = "page_android.html";
+                window.location.href = "https://play.google.com/store/apps/details?id=com.loxy.app&hl=fr&gl=US";
             } else {
                 // Rediriger vers www.loxy-app.com pour tout autre dispositif
                 window.location.href = "http://www.loxy-app.com";
